# whatimg

./: .gitignore  LICENSE  README.md  pyproject.toml
images_hdr/: dib1.dib  dib16.dib  dib256.dib  heic.heic  hif.hif  jpe.jpe  png_avif.avif  tif.tif  tiff.tiff
src/whatimg/: what.py
src/whatimg/const/: img_ext.py  img_type.py
src/whatimg/img/: __init__.py  base.py  gif.py  jpeg.py  png.py
