[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "whatimg"
version = "0.1.0"
authors = [
  { name="Gu-f" },
]
description = "A python library for viewing image types in python3."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Gu-f/whatimg"
"Bug Tracker" = "https://github.com/Gu-f/whatimg/issues"